--- a/Loxifi.TypeFactory.csproj
+++ b/Loxifi.TypeFactory.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<PackageProjectUrl>http://loxifi.com/Projects/Loxifi.TypeFactory</PackageProjectUrl>
-		<Version>0.2.1</Version>
+		<Version>0.3.1</Version>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageIcon>Properties\Icon.png</PackageIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
@@ -22,6 +22,11 @@
 		<RepositoryType>git</RepositoryType>
 		<RootNamespace>Loxifi</RootNamespace>
 	</PropertyGroup>
+	<ItemGroup>
+	  <Compile Remove="Tests\**" />
+	  <EmbeddedResource Remove="Tests\**" />
+	  <None Remove="Tests\**" />
+	</ItemGroup>
 	<ItemGroup>
 		<None Include="Properties\License.txt" Pack="true" PackagePath="Properties\License.txt" />
 		<None Include="Properties\Icon.png" Pack="true" PackagePath="Properties\Icon.png" />
